[package]
name = "northstar_dev_testing_helper_tool"
default-run = "northstar_dev_testing_helper_tool_bin"
version = "0.1.0"
authors = ["GeckoEidechse <gecko.eidechse+git@pm.me>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "northstar_dev_testing_helper_tool_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.18.0"
eframe = { version = "0.18.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = "1.0.81"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6.2"
self_update = { version = "0.30.0", features = ["archive-zip", "archive-tar", "compression-flate2", "compression-zip-deflate", "compression-zip-bzip2"]}
tracing-subscriber = "0.3"

[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/egui" }
# eframe = { path = "../egui/eframe" }
